@startuml lr2-architecture
skinparam classAttributeIconSize 0

namespace domain {

class Bank {
  -id: uuid.UUID
  -name: string
  -license: string
  +ID(): uuid.UUID
  +Name(): string
  +License(): string
}

class Branch {
  -id: uuid.UUID
  -bankID: uuid.UUID
  -address: string
  -opened: bool
  +ID(): uuid.UUID
  +BankID(): uuid.UUID
  +Address(): string
  +Open()
  +Close()
  +IsOpened(): bool
}

class Client {
  -id: uuid.UUID
  -passport: string
  -fullName: string
  -active: bool
  +ID(): uuid.UUID
  +Passport(): string
  +FullName(): string
  +Activate()
  +Deactivate()
  +IsActive(): bool
}

class Account {
  -id: uuid.UUID
  -number: string
  -clientID: uuid.UUID
  -balance: Money
  -status: AccountStatus
  +ID(): uuid.UUID
  +Number(): string
  +ClientID(): uuid.UUID
  +Balance(): Money
  +Status(): AccountStatus
  +Deposit(value: Money): error
  +Withdraw(value: Money): error
  +CanWithdraw(value: Money): error
  +IsActive(): bool
  +ChangeStatus(status: AccountStatus)
}

class SavingsAccount {
  -Account
  -BonusProgram: BonusProgram
  +Deposit(value: Money): error
  +BonusPoints(): int
  +RedeemBonus(points: int): error
}

class CreditAccount {
  -Account
  -overdraftLimit: Money
  +Withdraw(value: Money): error
  +CanWithdraw(value: Money): error
}

class BonusProgram {
  -points: int
  -tier: BonusTier
  +Accrue(value: Money)
  +ApplyBonus(points: int): bool
  +Bonus(): int
}

class Transaction {
  -id: uuid.UUID
  -fromAccountID: uuid.UUID
  -toAccountID: uuid.UUID
  -value: Money
  -status: TransactionStatus
  +ID(): uuid.UUID
  +FromAccountID(): uuid.UUID
  +ToAccountID(): uuid.UUID
  +Value(): Money
  +Status(): TransactionStatus
  +ChangeStatus(status: TransactionStatus)
  +IsCompleted(): bool
}

class Card {
  -id: uuid.UUID
  -number: string
  -accountID: uuid.UUID
  -active: bool
  +ID(): uuid.UUID
  +Number(): string
  +AccountID(): uuid.UUID
  +Activate()
  +Block()
  +IsActive(): bool
}

class Employee {
  -id: uuid.UUID
  -branchID: uuid.UUID
  -position: string
  -employed: bool
  +ID(): uuid.UUID
  +BranchID(): uuid.UUID
  +Position(): string
  +Hire()
  +Fire()
  +IsEmployed(): bool
  +Work()
}

class Loan {
  -id: uuid.UUID
  -clientID: uuid.UUID
  -amount: int
  -approved: bool
  +ID(): uuid.UUID
  +ClientID(): uuid.UUID
  +Amount(): int
  +Approve()
  +Reject()
  +IsApproved(): bool
}

class ATM {
  -id: uuid.UUID
  -branchID: uuid.UUID
  -cash: int
  +ID(): uuid.UUID
  +BranchID(): uuid.UUID
  +Cash(): int
  +Withdraw(amount: int): bool
  +Deposit(amount: int)
}

class Event {
  -id: uuid.UUID
  -aggregateID: uuid.UUID
  -eventType: string
  -occurredAt: time.Time
  +ID(): uuid.UUID
  +AggregateID(): uuid.UUID
  +Type(): string
  +OccurredAt(): time.Time
  +String(): string
}

}

namespace "application/services" as app_services {
interface PaymentAccount {
  +ID(): uuid.UUID
  +ClientID(): uuid.UUID
  +Status(): domain.AccountStatus
  +Balance(): domain.Money
  +Deposit(m: domain.Money): error
  +Withdraw(m: domain.Money): error
  +CanWithdraw(m: domain.Money): error
  +ChangeStatus(s: domain.AccountStatus)
}

interface Storage<K comparable, V any> {
  +Save(k: K, v: V): error
  +ByID(k: K): (V, error)
  +Delete(k: K): error
}

interface AccountStorage {
  +Save(k: uuid.UUID, v: PaymentAccount): error
  +ByID(k: uuid.UUID): (PaymentAccount, error)
  +Delete(k: uuid.UUID): error
  +UpdateStatus(accountUUID: uuid.UUID, status: domain.AccountStatus): error
}

interface EventStorage {
  +Save(k: uuid.UUID, v: domain.Event): error
  +ByID(k: uuid.UUID): (domain.Event, error)
  +Delete(k: uuid.UUID): error
  +QueryAll(): []*domain.Event
}

class PaymentService {
  -accounts AccountStorage
  +Deposit(amount: domain.Money, accountID: uuid.UUID): error
  +Withdraw(amount: domain.Money, accountID: uuid.UUID): error
  +ProcessTransaction(t: *domain.Transaction): error
}
}

namespace application {
class TransferUseCase {
  -payments: *services.PaymentService
  -events: services.EventStorage
  +Execute(t: *domain.Transaction): error
}

class BonusRedeemCommand {
  +AccountID: uuid.UUID
  +Points: int
}

class BonusRedeemUseCase {
  -accounts: services.AccountStorage
  -events: services.EventStorage
  +Execute(command: BonusRedeemCommand): error
}
}

namespace infrastructure {
class CacheStorage<K, V> {
  -mu: sync.RWMutex
  -data: map[K]V
  +Save(k: K, v: V): error
  +ByID(k: K): (V, error)
  +Delete(k: K): error
}

class AccountCache {
  -CacheStorage[uuid.UUID, services.PaymentAccount]
  +UpdateStatus(accountID: uuid.UUID, status: domain.AccountStatus): error
}

class EventCache {
  -CacheStorage[uuid.UUID, domain.Event]
  +QueryAll(): []*domain.Event
}
}

domain.Bank "1" -- "1..*" domain.Branch

domain.Branch "1" -- "0..*" domain.Employee
domain.Branch "1" -- "0..*" domain.ATM

domain.Client "1" -- "1..*" domain.Account
domain.Client "1" -- "0..*" domain.Loan

domain.Account "1" -- "0..*" domain.Card
domain.Account "1" -- "0..*" domain.Transaction 

domain.SavingsAccount *-- domain.Account
domain.CreditAccount *-- domain.Account
domain.SavingsAccount *-- domain.BonusProgram

app_services.PaymentAccount <|.. domain.Account
app_services.PaymentAccount <|.. domain.SavingsAccount
app_services.PaymentAccount <|.. domain.CreditAccount

app_services.AccountStorage <|.. infrastructure.AccountCache
app_services.EventStorage <|.. infrastructure.EventCache
infrastructure.AccountCache *-- infrastructure.CacheStorage
infrastructure.EventCache *-- infrastructure.CacheStorage

app_services.PaymentService --> app_services.AccountStorage

application.TransferUseCase --> app_services.PaymentService
application.TransferUseCase --> app_services.EventStorage

application.BonusRedeemUseCase --> app_services.AccountStorage
application.BonusRedeemUseCase --> app_services.EventStorage
@enduml
